  * Bump soname of both libraries
  * Bump build-dependencies
  * Switch to dpkg-source 3.0 (quilt) format
  * debian/control: Bump Standards-Version to 3.9.3 (no further changes)
  * Bump debhelper compatibility to 9
  * debian/watch: Update watch file to match new upstream name

  [ George Kiagiadakis ]
  * Change the gcc-4.7 ftbfs patch to use the upstream patch.
  * Switch build system to dh.

 -- Laurent Bigonville <bigon@debian.org>  Thu, 31 May 2012 14:47:51 +0200

telepathy-qt4 (0.7.1-1.1) unstable; urgency=low

  * Non-maintainer upload.

  [ Cyril Brulebois ]
  * Fix FTBFS with gcc 4.7 by fixing missing <unistd.h> includes
    (Closes: #667391).

 -- gregor herrmann <gregoa@debian.org>  Mon, 28 May 2012 16:21:33 +0200

telepathy-qt4 (0.7.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control: Update dependency version requirements.
  * debian/rules: Add code to bump makeshlibs args version automatically.
  * Bump standards-version to 3.9.2; no changes required.
  * Add myself to uploaders.

 -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 11 Jun 2011 14:47:18 +0300

telepathy-qt4 (0.5.15-1) experimental; urgency=low

  * New upstream release.
  * debian/rules: Update to use cmake now.
  * debian/control: Update Build-Deps for new version.
  * Bump package name sonames for new library soname.
  * debian/copyright: Update copyright years.

 -- Jonny Lamb <jonny@debian.org>  Thu, 14 Apr 2011 11:33:54 +0100

telepathy-qt4 (0.3.8-1) unstable; urgency=low

  * New upstream relase.
  * Make libtelepathy-qt4-dev depend on libtelepathy-farsight-dev,
    to agree with the header and runtime dependencies on the same.
  * Add myself to Uploaders.

 -- Adam Conrad <adconrad@0c3.net>  Wed, 25 Aug 2010 16:31:01 -0600

telepathy-qt4 (0.3.6-1) unstable; urgency=low

  [ George Goldberg ]
  * Update to new upstream release

 -- Jonny Lamb <jonny@debian.org>  Wed, 14 Jul 2010 14:18:54 +0100

telepathy-qt4 (0.3.5-1) unstable; urgency=low
