@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libtelepathy-qt4.so.2*
+usr/lib/*/libtelepathy-qt4.so.2*
