@@ -1,1 +1,1 @@
-debian/tmp/usr/lib/libtelepathy-qt4-farstream.so.2*
+usr/lib/*/libtelepathy-qt4-farstream.so.2*
