@@ -1,10 +1,13 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpkg/architecture.mk
+
 %:
 	dh $@ --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- -DDISABLE_WERROR=ON -DHAVE_DOT=YES
+	dh_auto_configure -- -DDISABLE_WERROR=ON -DHAVE_DOT=YES \
+	                     -DLIB_SUFFIX="/$(DEB_HOST_MULTIARCH)"
 
 ifeq (,$(findstring nodocs,$(DEB_BUILD_OPTIONS)))
 override_dh_auto_build:
